--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sovtech/semantic-release-config",
   "version": "1.0.1",
-  "description": "SovTech's semantic-release shareable configuration",
+  "description": "Scrums.com's semantic-release shareable configuration",
   "main": ".releaserc.json",
   "files": [
     ".releaserc.json"
@@ -17,24 +17,31 @@
     "semantic-release",
     "semantic-release-config",
     "npm",
-    "sovtech",
+    "scrums",
+    "scrums.com",
     "git",
     "release",
     "changelog"
   ],
   "author": "Nusrath Khan <nusrath501khan@gmail.com>",
+  "contributors": [
+    {
+      "name": "Daniel Harten",
+      "email": "danielmharten@gmail.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sovtech/semantic-release-config/issues"
   },
   "homepage": "https://github.com/sovtech/semantic-release-config#readme",
   "dependencies": {
-    "@semantic-release/changelog": "^3.0.6",
-    "@semantic-release/commit-analyzer": "^6.3.3",
-    "@semantic-release/git": "^7.0.18",
-    "@semantic-release/npm": "^5.3.4",
-    "@semantic-release/release-notes-generator": "^7.3.5",
-    "semantic-release-slack-bot": "^1.5.0"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
+    "semantic-release-slack-bot": "^4.0.2"
   },
   "peerDependencies": {
     "semantic-release": ">=15.13.31"
