--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,13 +19,10 @@ jobs:
         with:
           node-version: '22' # Specify your required Node.js version
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4.0.0
-
       - name: Install dependencies
-        run: pnpm i
+        run: npm i
 
       - name: Publish to npm
-        run: pnpm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
