--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Echo env
-        run: echo ${{ env.NPM_TOKEN }}
+        run: echo ${{ secrets.NPM_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -26,9 +26,8 @@ jobs:
         run: npm i
 
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --access public # Assuming your package is public
         env:
-          NODE_AUTH_TOKEN: ${{ env.NPM_TOKEN }}
-
-env:
-  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+# env:
+#   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
