chore: reference env differently

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm i
 
-      - run: npm publish --provenance --access public
+      - name: Publish to npm
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-# env:
-#   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
